<resources>
    <string name="app_name">NPM Convention</string>
    <string name="one">Welcome</string>
    <string name="two">Program</string>
    <string name="three">Events</string>
    <string name="four">Maps</string>
    <string name="five">Chapters</string>
    <string name="six">Exhibits</string>
    <string name="download">Download Program</string>
    <string name="upload">View</string>
    <string name="access">Download Events</string>
    <string name="addcalendar">Adds event to your Google calendar</string>
    <string name="from">to</string>
    <string name="evt_name">Event Name</string>
    <string name="evt_desc">Description</string>
    <string name="room_location">You can find this in </string>
    <string name="map_info">Map for location</string>
    <string name="random_img">Random image displayed</string>
    <string name="senders_name">Enter your name</string>
    <string name="senders_contact">Provide your email or contact number</string>
    <string name="senders_feedback">Enter your feedback here</string>
    <string name="feedback_title">NPM Convention App</string>
    <string name="feedback_title2">Android App Feedback Form</string>
    <string name="feedback_chg">Change Your Feedback</string>
    <string name="send">Send</string>
    <string name="update">Update</string>
    <string name="hermosa">chucknorrisrules</string>
    <string name="appdate">appdate</string>
    <string name="apptime">apptime</string>
    <string name="purpose">Before you can start to use the NPM convention app, you will need to grant permissions on your device so that you can download the NPM convention files. Please conduct the setup before attending the convention as the convention hall may have poor Internet connectivity. Let\'s get started below!</string>
    <string name="purpose1">Before you can start to use the NPM convention app, you will need to grant permissions on your device so that you can download the NPM convention files.</string>
    <string name="purpose2">Once you complete this setup, these files will be stored in your download folder called \'NPM\'.</string>
    <string name="purpose3">The convention hall may have poor Internet connectivity, so you are encouraged to complete this task before attending the convention events.</string>
    <string name="purpose4">If you need to download the files again, use the Settings link to complete this step again.</string>
    <string name="purpose5">Let\'s check your permission settings and download the necessary files for the convention.</string>
    <string name="about">About</string>
    <string name="feedback">Feedback</string>
    <string name="settings">Settings</string>
    <string name="initial_setup">Run Setup</string>
    <string name="check_setup">Download Files Again</string>
    <string name="time_title">Event Time</string>
    <string name="search">Search</string>
    <string name="sponsors">Sponsors</string>
    <string name="about_photo">Shows an image of Mike</string>
    <string name="about_info">Who is TechGalavant?</string>
    <string name="info">Mike Fallon is the creator of this app. He enjoys learning about technology and exploring it for practical purposes. That includes coding apps for fun. He is a friend of Peter Brockmann, also known as Digital Hermosa, the creator of the iPhone and iPad versions of this app.</string>
    <string name="about_contact">Mike\'s Blog</string>
    <string name="contact">Visit Mike\'s blog to contact him or to read about his other technology adventures!</string>
    <string name="website">www.techgalavant.com</string>
    <string name="privacy">Privacy Policy - click here</string>
    <string name="see_also">Peter\'s Blog</string>
    <string name="down_file">Download File</string>
    <string name="chap_contact">Chapter Info</string>
    <string name="chapter_phone">Link to call chapter if the telephone number has been provided.</string>
    <string name="chapter_email">Link to email the chapter if an email address has been provided.</string>
    <string name="chapter_website">Link to chapter website if the website address has been provided.</string>
    <string name="chapter_facebook">Link to the chapter Facebook page if it has been provided.</string>
    <string name="chap_1">National Committee on Chapters</string>
    <string name="chap_2">Chapters at Convention</string>
    <string name="chap_3">How To Form A Chapter</string>
    <string name="chap_4">Become A Chapter Member</string>
    <string name="chap_5">Purpose of NPM Chapters</string>
    <string name="chap_setup_info">Chapter Info</string>
    <string name="evt_survey">Survey</string>
    <string name="evt_survey_ask">If you attended this event, please provide us with some quick feedback on it.</string>
    <string name="evt_feedback_form">Comments</string>
    <string name="welcome_info">Be sure to check this screen occasionally as key announcements and last minute changes may appear here.</string>
    <string name="apdate_hint">No Updates Today</string>
    <string name="photocaption">Peter and Mike</string>
    <string name="map_image_info">Shows a map of the convention area</string>
    <string name="gotopage">Go To Page</string>
    <string name="gonow">Go!</string>
    <string name="chapter_manual">NPM Chapter Manual</string>
</resources>
