<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="3dp"
    android:paddingRight="3dp"
    tools:context="com.techgalavant.npmconvention.MainActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/one"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:paddingTop="5dp"
        android:paddingBottom="3dp"/>

    <TextView
        android:id="@+id/purpose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        android:text="@string/purpose"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_below="@+id/tv_title"
        android:paddingBottom="2dp" />

    <Button
        android:id="@+id/request_permission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/purpose"
        android:text="@string/initial_setup"/>
    <Button
        android:id="@+id/check_permission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/request_permission"
        android:paddingLeft="7dp"
        android:paddingRight="7dp"
        android:paddingTop="10dp"
        android:text="@string/check_setup"/>



</RelativeLayout>