<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.techgalavant.npmconvention.WelcomeFragment">

    <TextView
        android:id="@+id/npmtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/one"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:paddingTop="5dp"
        android:paddingBottom="3dp"/>

    <TextView
        android:id="@+id/welcominfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_info"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_below="@+id/npmtitle"
        android:paddingBottom="2dp"
        android:padding="5dp"
        android:layout_margin="5dp"/>

    <TextView
        android:id="@+id/appdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/appdate"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_below="@+id/welcominfo"
        android:background="@color/updateInfoColor"
        android:paddingBottom="2dp" />

    <TextView
        android:id="@+id/quicktext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="3dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="3dp"
        android:gravity="center_horizontal"
        android:layout_below="@+id/appdate"
        android:hint="@string/apdate_hint"
        android:textSize="20sp"/>


</RelativeLayout>