<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.techgalavant.npmconvention.ProgramFragment">


        <Button
            android:id="@+id/btnDownload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="22dp"
            android:layout_marginStart="22dp"
            android:layout_weight="1"
            android:text="@string/download"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/btnView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="49dp"
            android:layout_marginStart="49dp"
            android:layout_weight="1"
            android:text="@string/upload"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/btnDownload"
            android:layout_toEndOf="@+id/btnDownload" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/two"
            android:textColor="#ffffff"
            android:id="@+id/tv_header"
            android:textSize="18dp"
            android:gravity="center"
            android:layout_below="@+id/btnDownload"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="16dp"></TextView>

        <EditText
            android:id="@+id/goto_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:layout_below="@+id/tv_header"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:textStyle="italic"
            android:textColor="@color/colorPrimaryDark"
            android:background="@drawable/rounded_search"
            android:hint="@string/gotopage" />

        <Button
            android:id="@+id/btnGoToPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gonow"
            android:layout_below="@+id/tv_header"
            android:layout_toRightOf="@+id/goto_page"
            android:layout_toEndOf="@+id/goto_page" />

        <com.github.barteksc.pdfviewer.PDFView
            android:id="@+id/pdfView"
            android:layout_below="@+id/goto_page"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>


</RelativeLayout>