<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="3dp"
    android:paddingRight="3dp"
    tools:context="com.techgalavant.npmconvention.MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/settings"
        android:src="@drawable/npmlogo"/>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:text="@string/settings"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:paddingTop="5dp"
        android:paddingBottom="3dp"/>

    <TextView
        android:id="@+id/purpose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        android:text="@string/purpose1"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_below="@+id/tv_title"
        android:paddingBottom="2dp" />

    <Button
        android:id="@+id/request_permission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/purpose"
        android:text="@string/initial_setup"/>

</RelativeLayout>


</ScrollView>