<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_backdrop_height"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp">

            <ImageView
                android:id="@+id/backdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/random_img"
                android:scaleType="centerCrop"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="24dp">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_margin">

                <LinearLayout
                    style="@style/Widget.CardContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/ch_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/chap_contact"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                    <TextView
                        android:id="@+id/dir_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="2dp"
                        android:textColor="#5d5d5d"
                        android:paddingLeft="2dp"/>

                    <TextView
                        android:id="@+id/dir_adr"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="2dp"
                        android:textColor="#5d5d5d"
                        android:paddingLeft="2dp"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_margin">

                <LinearLayout
                    style="@style/Widget.CardContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/chap_ph"
                        android:contentDescription="@string/chapter_phone"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_weight=".25"
                        android:src="@drawable/ic_phone"
                        android:clickable="true"
                        android:onClick="callPhone"/>

                    <ImageView
                        android:id="@+id/chap_em"
                        android:contentDescription="@string/chapter_email"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_weight=".25"
                        android:src="@drawable/ic_email"
                        android:clickable="true"
                        android:onClick="sendEmail"/>

                    <ImageView
                        android:id="@+id/chap_web"
                        android:contentDescription="@string/chapter_website"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_weight=".25"
                        android:src="@drawable/ic_web"
                        android:clickable="true"
                        android:onClick="visitWeb"/>

                    <ImageView
                        android:id="@+id/chap_fb"
                        android:contentDescription="@string/chapter_facebook"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_weight=".25"
                        android:src="@drawable/ic_fb"
                        android:clickable="true"
                        android:onClick="visitFacebook"/>


                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>